--- a/gitSheet/style.css
+++ b/gitSheet/style.css
@@ -1,11 +1,16 @@
 /* spacing */
 
+body
+{
+  background-image: url('resources/plant.jpg');
+}
+
 table
 {
   table-layout: fixed;
-  width: 100%;
   border-collapse: collapse;
   border: 3px solid black;
+  vertical-align: middle;
 }
 
 th, td
@@ -28,6 +33,7 @@ thead th
 th
 {
   letter-spacing: 2px;
+  font-weight: bold;
 }
 
 td
@@ -37,13 +43,13 @@ td
 
 tbody td
 {
-  text-align: center;
+  text-align: left;
   border: 3px solid #DFE2E5;
 }
 
 thead
 {
-  background: url(http://maxpixel.freegreatpicture.com/static/photo/1x/Sky-Nero-Night-Stars-Space-Summer-Nothing-1953547.jpg);
+  background: url(resources/nebula.jpeg);
   color: white;
   text-shadow: 1px 1px 1px black;
 }
@@ -52,12 +58,18 @@ thead th
 {
   background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(255,255,255,.25));
   border: 3px solid #DFE2E5;
+  font-size: medium; 
+}
+
+tbody td:first-of-type
+{
+  font-weight: bold;
+  text-align: center;
 }
 
 tbody tr:nth-child(odd)
 {
   background-color: #FFFFFF;
-  /*#F6F8FA;*/
 }
 
 tbody tr:nth-child(even)
@@ -75,3 +87,30 @@ caption
   color: #666;
   letter-spacing: 1px;
 }
+
+a:hover
+{
+  font-weight: bold;
+}
+
+a:visited
+{
+  color: magenta;
+}
+
+/*
+ * CSS Properties
+  ✓ background-image
+  ✓ background-color
+  ✓ font-size
+  ✓ font-weight
+  ✓ font-family
+  ✓ border
+  ✓ vertical-align
+  ✓ text-align
+ * CSS Selectors
+  ✓ :hover
+  ✓ :visited
+  ✓ :first-of-type
+  ✓ :nth-child
+ */
